--- a/public/Icarus.html
+++ b/public/Icarus.html
@@ -3,7 +3,7 @@
   <head>
     <title>Parcel Sandbox</title>
     <meta charset="UTF-8" />
-    <link rel="stylesheet" href="public/icarus.css">
+    <link rel="stylesheet" type="text/css" href="Icarus.css">
     
   </head>
 
@@ -29,6 +29,6 @@ The US government is hiding the alien existence particularly because of the unet
     </div>
     <script src="/socket.io/socket.io.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.3.0/socket.io.js"></script>
-    <script src="public/icarus.js" async defer></script>
+    <script src="/icarus.js" async defer></script>
   </body>
 </html>
