--- a/public/Icarus.html
+++ b/public/Icarus.html
@@ -29,6 +29,6 @@ The US government is hiding the alien existence particularly because of the unet
     </div>
     <script src="/socket.io/socket.io.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.3.0/socket.io.js"></script>
-    <script src="/icarus.js" async defer></script>
+    <script src="/public/icarus.js" async defer></script>
   </body>
 </html>
