--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,7 @@
       <div id="right">
         <div id="button_container">
           <div id="powers">
-            <span>Powers</span>
+            <span>Control</span>
           </div>
           <button type="button" id="button1">Add "not"</button>
           <button type="button" id="button4">Change Word</button>
